<resources>
    <string name="app_name">VInstallment Admin</string>
    <string name="remaining_installment_title">Sisa cicilan</string>
    <string name="rp_0_00">Rp. 0,00</string>
    <string name="your_eula_title">End User License Agreement (EULA)</string>
    <string name="your_eula_text">This device will be managed and maintained by VInstallment during the installment period. The terms and conditions of VInstallment will apply throughout the installment period.</string>
    <string name="accept_and_continue_button">Accept and continue</string>
    <string name="setup_complete_welcome">Setup Complete, Welcome</string>
    <string name="icon">VInstallment Image</string>
    <string name="punishment_not_active">Tidak aktif</string>
    <string name="third_punishment">Hukuman ini membuat device akan mengeluarkan suara setiap satu jam</string>
    <string name="third_punishment_title">Hukuman terlambat bayar tiga hari</string>
    <string name="second_punishment">Hukuman ini akan menonaktifkan semua aplikasi kecuali aplikasi komunikasi seperti whatsapp, telepon, sms.</string>
    <string name="second_punishment_title">Hukuman terlambat bayar dua hari</string>
    <string name="first_punishment">Hukuman ini akan menonaktifkan aplikasi kamera</string>
    <string name="first_punishment_title">Hukuman terlambat bayar satu hari</string>
    <string name="punishment_title">Punishment / Hukuman :</string>
    <string name="minimum_paid">Rp 0,00</string>
    <string name="minimum_paid_title">Minimal Pembayaran</string>
    <string name="deadline">Tanggal 1</string>
    <string name="deadline_title">Jatuh Tempo</string>
    <string name="installment_total">Rp. 0,00</string>
    <string name="installment_total_title">Total nominal cicilan</string>
    <string name="remaining_installment">Rp. 0,00</string>
    <string name="username">Username</string>
    <string name="total_installment_count">Jumlah cicilan</string>
    <string name="calendar">calendar</string>
    <string name="wallet">wallet</string>
    <string name="first_punishment_number">1</string>
    <string name="second_punishment_number">2</string>
    <string name="third_punishment_number">3</string>
    <string name="confirm_payment">Konfirmasi Pembayaran</string>
    <string name="h_1">H-1</string>
    <string name="h_1_notif">Notifikasi pembayaran akan datang</string>
    <string name="h_plus_3">H+3</string>
    <string name="h_plus_3_value">Memutar suara himbauan untuk melakukan pembayaran</string>
    <string name="h_min_0_notif">Notifikasi jatuh tempo hari ini</string>
    <string name="h_0">H-0</string>
    <string name="h_plus_1">H+1</string>
    <string name="h_plus_1_value">Kamera dinonaktifkan</string>
    <string name="h_plus_2_value">Aplikasi dibatasi</string>
</resources>