<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toggle Button with Title and Subtitle -->
    <LinearLayout
        android:id="@+id/h_min_1"
        android:layout_width="0dp"
        android:padding="@dimen/md"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_1_notif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/switchH_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/h_min_0"
        android:layout_width="0dp"
        android:padding="@dimen/md"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h_min_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_0"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_min_0_notif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/switchH_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/h_plus_1"
        android:layout_width="0dp"
        android:padding="@dimen/md"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h_min_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_plus_1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_plus_1_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/switchH_plus_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/h_plus_2"
        android:layout_width="0dp"
        android:padding="@dimen/md"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h_plus_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="H+2"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_plus_2_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/switchH_plus_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/h_plus_3"
        android:layout_width="0dp"
        android:padding="@dimen/md"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h_plus_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_plus_3"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/h_plus_3_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/switchH_plus_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/md"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/h_plus_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonBayar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bayar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonLunas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lunas"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
